# SWARM-INTELLIGENCE-NETWORK

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  BACKEND_CORE_IMPLEMENTATION_REPORT.md  BACKEND_CORE_PROGRESS.md  Cargo.toml  Cập Nhật Quan Trọng.md  EMPLOYEE_A_COMPREHENSIVE_SUMMARY.md  EMPLOYEE_C_COMPLETION_REPORT.md  EMPLOYEE_C_V2_COMPLETION_REPORT.md  LICENSE  Makefile  Nhật Kí Cập Nhật.md  PHASE2_RESILIENCE_IMPLEMENTATION_REPORT.md  Phân Công Việc.md  QUICK_START_PHASE1_PHASE2.md  README.md  SESSION_VRF_SUMMARY.md  TEAM_WORK_DIVISION.md  VRF_IMPLEMENTATION_REPORT.md  buf.gen.yaml  demo_consensus_features.sh  roadmap-12-months.md  swarm-intelligence-design.md  test_vrf_standalone.rs
.github/: CODEOWNERS
.github/workflows/: chaos-weekly.yml  ci.yml  codeql.yml  detection-quality.yml  e2e-detection.yml  jetstream-validate.yml  perf-nightly.yml  perf-pr-comment.yml  security-extended.yml  trivy.yml
configs/: detection-rules.yaml
deployments/kubernetes/: README.md  api-gateway.yaml  federation.yaml  ingress-and-network.yaml  namespace.yaml
docs/: BACKEND_CORE_README.md  RESILIENCE_LIBRARY_GUIDE.md  SECURITY_LAYER.md  SECURITY_LAYER_SUMMARY.md  THREAT_INTELLIGENCE_ENHANCEMENTS.md  detection-quality.csv  event-taxonomy.md  jetstream-design.md  metrics-naming.md  model-card-autoencoder.md  perf-baseline.md  perf-trend.csv  performance-optimization.md  threat-hunting-playbook.md  trace-context.md
docs/adr/: 0001-monorepo-decision.md  0002-event-versioning.md  0003-resilience-library.md  README.md
docs/runbooks/: critical-severity-surge.md  detection-degradation.md
infra/: alert-rules-enhanced.yml  alert-rules.yml  alertmanager.yml  docker-compose.dev.yml  jetstream-spec.yaml  loki-config.yml  prometheus.yml  promtail-config.yml  tempo-config.yml
infra/dashboards/: detection_metrics.json  ingest_consensus_overview.json  security_overview.json
libs/rust/core/: Cargo.toml
libs/rust/core/examples/: resilience_demo.rs
libs/rust/core/src/: autoscaling.rs  config_signature.rs  consensus.rs  crypto_bls.rs  crypto_pqc.rs  crypto_vrf.rs  evolutionary.rs  federated_learning.rs  gossip.rs  lib.rs  lifecycle.rs  metrics_ext.rs  ml_detection.rs  model_registry.rs  privacy.rs  reputation.rs  resilience.rs  resilience_advanced.rs  resilience_telemetry.rs  transport_quic.rs
libs/rust/core/src/consensus/: mod.rs  pbft.rs
libs/rust/core/src/federated_learning/: coordinator.rs  mod.rs
libs/rust/core/tests/: basic.rs  consensus_federation.rs  resilience_standalone.rs
libs/rust/proto/: Cargo.toml  build.rs
libs/rust/proto/src/: lib.rs
proto/: README.md
proto/common/: health.proto
proto/consensus/: pbft.proto
proto/events/: security_event.proto
proto/federation/: federated_round.proto
proto/ingestion/: raw_event.proto
scripts/: bootstrap-pre-commit.sh  calc_detection_quality.py  check-license.sh  coverage_gate.sh  fix-license.sh  gen_synthetic_threats.py  generate-proto.sh  generate_perf_sparkline.sh  provision_jetstream.sh  syft-sbom.sh  test_e2e_detection.sh  test_security_layer.sh  test_threat_correlation.sh  update_perf_baseline.sh  validate_jetstream.sh
scripts/chaos/: network_faults.sh  node_kill.sh  resource_stress.sh
services/: README_SECURITY_LAYER.md
services/anomaly-detection/: README.md  pyproject.toml  run.py
services/anomaly-detection/anomaly_detection/: __init__.py  onnx_detector.py  service.py  streaming_welford.py  train_autoencoder.py
services/api-gateway/: README.md  circuit_breaker.go  gateway_test.go  gateway_v2.go  go.mod  go.sum  main.go  main_new.go  rate_limiter_hybrid.go  request_validator.go
services/audit-trail/: Dockerfile  go.mod  main.go
services/billing-service/: Dockerfile  README.md  go.mod  main.go  main_v2.go  probabilistic.go
services/blockchain/: go.mod  go.sum
services/consensus-core/: Cargo.toml  Dockerfile  README_V2.md
services/consensus-core/benches/: resilience_perf.rs
services/consensus-core/src/: fast_path_pbft.rs  lib.rs  main.rs  optimized_pbft.rs  validator_manager.rs  view_change.rs
services/consensus-core/tests/: integration_optimized.rs  integration_resilience.rs  quorum_integration.rs  startup_integration.rs  state_progression.rs
services/control-plane/: Dockerfile  go.mod  main.go
services/coordinator/: Cargo.toml
services/coordinator/src/: consensus.rs  federation.rs
services/detection/: Cargo.toml
services/detection-service/: Cargo.toml
services/detection-service/src/: anomaly.rs  ingest.rs  main.rs  ml.rs  pipeline.rs  signature_db.rs
services/detection/src/: main.rs  pipeline.rs
services/edge-fleet/: Cargo.toml  Dockerfile
services/evolution-core/: Dockerfile  main.py  pyproject.toml
services/federated-orchestrator/: Dockerfile  main.py  pyproject.toml
services/federation/: README.md  crdt.go  go.mod  main.go  sync_protocol.go
services/identity-ca/: Cargo.toml  Dockerfile
services/inference-gateway/: Cargo.toml  Dockerfile
services/model-registry/: Dockerfile  main.py  pyproject.toml
services/model-registry/tests/: test_health.py
services/node-runtime/: Cargo.toml
services/orchestrator/: README.md  README_V2.md  cancellation.go  dag_engine.go  go.mod  go.sum  main.go  orchestrator_test.go  persistence.go  persistence_rocksdb.go.bak  plugins.go  scheduler.go  task_executor.go
services/policy-service/: Dockerfile  README.md  README_OPA_V2.md  go.mod  go.sum  main.go  main_test.go  opa_engine.go  policy_test.go
services/risk-engine/: Cargo.toml  Dockerfile
services/sensor-gateway/: Cargo.toml  Dockerfile
services/sensor-gateway/benches/: detection_overhead.rs  e2e_latency.rs  ingest_throughput.rs
services/sensor-gateway/src/: main.rs  nats_pool.rs
services/sensor-gateway/src/detection/: anomaly.rs  engine.rs  mod.rs  rules.rs
services/sensor-gateway/tests/: ingest_pipeline.rs  integration_nats.rs  metrics_exposure.rs  run_degraded.rs
services/signature-engine/: go.mod  main.go
services/swarm-gossip/: Cargo.toml  Dockerfile
services/swarm-gossip/src/: main.rs
vrf_test/: Cargo.toml
vrf_test/src/: main.rs
(+70 files in other folders)
