[package]
name = "consensus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version="1", features=["full"] }
tracing = "0.1"
anyhow = "1"
serde = { version="1", features=["derive"] }
serde_json = "1"
swarm-core = { path = "../../libs/rust/core" }
swarm-proto = { path = "../../libs/rust/proto" }
tonic = { version = "0.11", features=["transport"] }
prost = "0.12"
opentelemetry = { version = "0.21", features=["rt-tokio"] }
tracing-opentelemetry = "0.22"
async-trait = "0.1"
prometheus = "0.13"
axum = { version = "0.7", features=["macros"] }
async-nats = "0.36"
opentelemetry-prometheus = "0.21"
sled = "0.34"
once_cell = "1"

[features]
integration = []
