[package]
name = "coordinator-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
async-nats = "0.36"
swarm-core = { path = "../../libs/rust/core" }
tokio = { version = "1", features=["rt-multi-thread","macros"] }
thiserror = "1"
