[package]
name = "detection-service"
version = "0.1.0"
edition = "2021"

[features]
onnx = ["tract-onnx", "tract-core"]

[dependencies]
swarm-core = { path = "../../libs/rust/core" }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features=["derive"] }
serde_json = "1"
tokio = { version = "1", features=["rt-multi-thread","macros","sync","time"] }
async-trait = "0.1"
parking_lot = "0.12"
thiserror = "1"
# storage
sled = "0.34"
# bloom filter
bloom = "0.3"
# pattern matching & hashing & mmap
aho-corasick = "1"
sha2 = "0.10"
memmap2 = "0.9"
arc-swap = "1"
crc32fast = "1"
itertools = "0.12"
# optional onnx inference
tract-core = { version = "0.21", optional = true }
tract-onnx = { version = "0.21", optional = true }

[dev-dependencies]
rand = "0.8"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
opt-level = "z"
