[project]
name = "evolution-core"
version = "0.1.0"
description = "SwarmGuard evolutionary optimization core"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
numpy = "^1.26.0"
ray = "^2.9.0"
protobuf = "^5.27.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
