[project]
name = "model-registry"
version = "0.1.0"
description = "SwarmGuard model registry service"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
minio = "^7.2.0"
protobuf = "^5.27.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
