[package]
name = "sensor-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["fmt","env-filter"] }
anyhow = "1"
serde = { version="1", features=["derive"] }
serde_json = "1"
swarm-core = { path = "../../libs/rust/core" }
async-nats = "0.36"
swarm-proto = { path = "../../libs/rust/proto" }
prost = "0.12"
opentelemetry = { version = "0.29", features=["metrics"] }
opentelemetry-otlp = "0.29"
tracing-opentelemetry = "0.26"
fxhash = "0.2"
hostname = "0.3"
swarm-resilience = { path = "../../libs/rust/resilience" }
notify = { version = "6" }
tokio-stream = "0.1"
regex = "1"
parking_lot = "0.12"
thiserror = "1"
sha2 = "0.10"
ed25519-dalek = { version = "1", features=["rand"] }
rand = "0.8"
lazy_static = "1.4"
once_cell = "1.19"

[features]
integration = []

[dev-dependencies]
criterion = { version = "0.5", features=["async_tokio"] }
tokio = { version = "1", features=["full"] }
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "detection_overhead"
harness = false

[[bench]]
name = "e2e_latency"
harness = false
