[package]
name = "swarm-gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features=["full"] }
tracing = "0.1"
anyhow = "1"
quinn = "0.11"
serde = { version="1", features=["derive"] }
serde_json = "1"
swarm-core = { path = "../../libs/rust/core" }
async-nats = "0.36"

[features]
integration = []
