[package]
name = "swarm-gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features=["full"] }
tracing = "0.1"
anyhow = "1"
quinn = "0.11"
serde = { version="1", features=["derive"] }
serde_json = "1"
swarm-core = { path = "../../libs/rust/core" }
async-nats = "0.36"
parking_lot = "0.12"
rand = "0.8"
sha2 = "0.10"
uuid = { version = "1", features=["v4"] }
chrono = { version = "0.4", default-features=false, features=["clock"] }
opentelemetry = "0.21"

[features]
integration = []
