[package]
name = "swarm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
serde = { version="1", features=["derive"] }
anyhow = "1"
opentelemetry = { version = "0.29" }
opentelemetry_sdk = { version = "0.29", features=["metrics"] }
opentelemetry-otlp = { version = "0.29", features=["grpc-tonic"] }
tracing-opentelemetry = "0.26"
opentelemetry-prometheus = "0.29"
once_cell = "1"
axum = { version = "0.7", features=["macros"] }
tokio = { version = "1", features=["rt-multi-thread","macros"] }
reqwest = { version = "0.12", features=["json","rustls-tls"] }
config = "0.14"
serde_yaml = "0.9"
notify = { version = "6" }
parking_lot = "0.12"
chrono = { version = "0.4", default-features = false, features=["clock"] }
uuid = { version = "1", features=["v4","serde"] }
ed25519-dalek = { version = "2", features=["std"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tokio-rustls = "0.25"
rustls = { version = "0.23", default-features = false, features=["tls12"] }
rustls-pemfile = "2"
