[package]
name = "swarm-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features=["transport"] }
prost = "0.12"
prost-types = "0.12"
walkdir = "2"

[build-dependencies]
prost-build = "0.12"
tonic-build = { package = "tonic-build", version = "0.11" }
sha2 = "0.10"

[lib]
name = "swarm_proto"
path = "src/lib.rs"
